<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/wolt_blue"
    tools:context=".DeliveryFeeCalculatorFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wolt_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <View
        android:id="@+id/cardView"
        android:layout_width="414dp"
        android:layout_height="619dp"
        android:background="@drawable/round_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/deliveryFeeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/delivery_fee_calculator_string"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/wolt_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.120000005" />



    <TextView
        android:id="@+id/cardValueTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_value"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/cardValueEt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="@string/cart_value_et"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/cart_value_et"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView"
        app:layout_constraintVertical_bias="0.056"/>

    <TextView
        android:id="@+id/deliveryDistanceTv"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/delivery_distance"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardValueTv"
        app:layout_constraintVertical_bias="0.103" />


    <EditText
        android:id="@+id/deliveryDistanceEt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="@string/delivery_distance_et"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/delivery_distance_et"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardValueEt"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/amountOfItemsTv"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:text="@string/amount_of_items"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryDistanceTv"
        app:layout_constraintVertical_bias="0.103" />


    <EditText
        android:id="@+id/amountOfItemsEt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="@string/amount_of_items"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/amount_of_items"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryDistanceEt"
        app:layout_constraintVertical_bias="0.088"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountOfItemsTv"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/timeEt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="@string/dd_mm_yyyy"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountOfItemsEt"
        app:layout_constraintVertical_bias="0.096" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/select_a_time"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toEndOf="@+id/timeEt"
        app:layout_constraintTop_toBottomOf="@+id/amountOfItemsEt"
        app:layout_constraintVertical_bias="0.103" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishRunBtn"
        android:layout_width="308dp"
        android:layout_height="64dp"
        android:text="@string/calculate_delivery_price"
        android:textSize="16sp"
        app:backgroundTint="@color/wolt_dark_blue"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        app:rippleColor="@color/wolt_blue"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/deliveryPriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishRunBtn"
        app:layout_constraintVertical_bias="0.372" />


</androidx.constraintlayout.widget.ConstraintLayout>